maven.sh: remove obsolete PermGen option
Java 8 gives a warning whenever this now-obsolete flag is present.
Easier to just remove it. It seems vanishingly unlikely that I'll be
compiling a huge Maven project in the future using Java prior to 8.